# TextCheck

./: CMakeLists.txt  MD5_generator.cpp  MD5_generator.h  README.md  Trie.cpp  Trie.h  main.cpp  md5CreateTrie.cpp  md5CreateTrie.h
File/: dataBase.txt  input.txt
